--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="layout">
       <div class="container log">
-        <div class="row">
+        <div id="display" class="row">
           <div class="content">
             <img src="img/logo2.png" alt="logo">
             <h2> Effettua il log-in</h2>
@@ -19,34 +19,30 @@
             <span></span>
             <div class="log-in">
               <div id="email">
-                <i id="find-email" class="fa fa-user-o" aria-hidden="true"></i><input type="email" name="" value="" placeholder=" Digita la tua email">
+                <i class="fa fa-user-o" aria-hidden="true"></i><input id="find-email" type="email" name="" value="" placeholder=" Digita la tua email">
               </div>
-              <p id="message"> es. aaaaa@hotmail.it </p>
+              <p id="message" class=""> es. aaaaa@hotmail.it </p>
 
               <button id="verifica-email" type="button" name="button">  <i class="fa fa-arrow-right" aria-hidden="true"></i> <span>Verifica Email</span></button>
             </div>
 
 
-            <a href="#">Nuovo utente? Apri un conto qui.</a>
+            <a id="aggiungi-email" href="#">Nuovo utente? Apri un conto qui.</a>
 
           </div>
         </div>
       </div>
-      <div class="container ">
-        <div class="row">
+      <div class="container game ">
+        <div id="game" class="row hidden">
           <div class="content">
-
+              <h2 id=welcome> </h2>
+              <h1>Giochiamo con i dadi</h1>
           </div>
         </div>
       </div>
     </div>
-      <div class="container login">
-        <div class="row">
-          <div class="content">
 
-          </div>
-        </div>
-      </div>
+
 
        <script src="js/script.js" charset="utf-8"></script>
   </body>
